--- a/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
@@ -81,7 +81,7 @@
 
 		<div class="row title" style="background-color: #68BA4B;">		
 			<div class="col-md-12">
-				<span class="large">¡Bienvenido  @session.get("nick")!</span>	
+				<span>¡Bienvenido  @session.get("nick")!</span>	
 			</div>	
 		</div>
 		<!--div class="row" style="background-color:#eaeaea; padding: 10px; " >
