--- a/TVMaxPolla/TVMaxPolla/platforms/android/res/xml/config.xml
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/res/xml/config.xml
@@ -1,16 +1,44 @@
 <?xml version='1.0' encoding='utf-8'?>
-<widget id="com.hecticus.tvmaxpolla" version="0.0.1" xmlns="http://www.w3.org/ns/widgets" xmlns:cdv="http://cordova.apache.org/ns/1.0">
-    <name>Hello Cordova</name>
-    <preference name="loglevel" value="DEBUG" />
+<widget id="com.hecticus.tvmaxpolla" version="1.0.0" xmlns="http://www.w3.org/ns/widgets" xmlns:cdv="http://cordova.apache.org/ns/1.0">
+    <name>TV Max Polla</name>
+    <preference name="AllowInlineMediaPlayback" value="false" />
+    <preference name="BackupWebStorage" value="cloud" />
+    <preference name="DisallowOverscroll" value="false" />
+    <preference name="EnableViewportScale" value="false" />
+    <preference name="KeyboardDisplayRequiresUserAction" value="true" />
+    <preference name="MediaPlaybackRequiresUserAction" value="false" />
+    <preference name="SuppressesIncrementalRendering" value="false" />
+    <preference name="TopActivityIndicator" value="gray" />
+    <preference name="GapBetweenPages" value="0" />
+    <preference name="PageLength" value="0" />
+    <preference name="PaginationBreakingMode" value="page" />
+    <preference name="PaginationMode" value="unpaginated" />
+    <preference name="permissions" value="none" />
+    <preference name="useBrowserHistory" value="true" />
+    <preference name="orientation" value="portrait" />
+    <preference name="target-device" value="universal" />
+    <preference name="fullscreen" value="true" />
+    <preference name="webviewbounce" value="true" />
+    <preference name="prerendered-icon" value="true" />
+    <preference name="stay-in-webview" value="false" />
+    <preference name="ios-statusbarstyle" value="black-opaque" />
+    <preference name="detect-data-types" value="true" />
+    <preference name="exit-on-suspend" value="false" />
+    <preference name="show-splash-screen-spinner" value="true" />
+    <preference name="auto-hide-splash-screen" value="true" />
+    <preference name="disable-cursor" value="false" />
+    <preference name="android-minSdkVersion" value="8" />
+    <preference name="android-installLocation" value="auto" />
+    <icon src="icon.png" />
     <feature name="App">
         <param name="android-package" value="org.apache.cordova.App" />
     </feature>
     <name>TVMaxPolla</name>
     <description>
-        A sample Apache Cordova application that responds to the deviceready event.
+        Aplicacion de TVMax Polla
     </description>
-    <author email="dev@cordova.apache.org" href="http://cordova.io">
-        Apache Cordova Team
+    <author email="contact@hecticus.com" href="http://www.hecticus.com">
+        Hecticus Software Inc.
     </author>
     <content src="index.html" />
     <access origin="*" />
