--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/css/main.css
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/css/main.css
@@ -29,9 +29,9 @@
 		position: absolute; z-index: 2; top: 0; left: 0; 
 		width: 100%; height: 45px;
 		line-height: 45px;
-		background: #003f00;
+		background: #3E79C4;
 		padding: 0;
-		color: #FFC600;
+		color: #ffffff;
 		font-size: 20px;
 		text-align: center;
 		font-weight: bold;
