--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/css/main.css
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/css/main.css
@@ -5,11 +5,9 @@
 	body { overflow: hidden; /* this is important to prevent the whole page to bounce */}
 		
 	
-	
-	
-		
+
 	#wrapper, #wrapper2, #wrapperM { 
-		position: absolute;z-index: 1; top: 45px; bottom: 0; left: 0; width: 100%; background: #fff;
+		position: absolute;z-index: 1; top: 50px; bottom: 0; left: 0; width: 100%; background: #fff;
 	}
 	
 	.scroller {background-color: #ffffff;}
@@ -27,16 +25,22 @@
 	
 	header {	
 		position: absolute; z-index: 2; top: 0; left: 0; 
-		width: 100%; height: 45px;
-		line-height: 45px;
+		width: 100%; 
+		height: 50px;
+		line-height: 50px;
 		background: #3E79C4;
 		padding: 0;
 		color: #ffffff;
 		font-size: 20px;
 		text-align: center;
 		font-weight: bold;
+		display: none;
 	}
 			
+	
+	body:not(.content-home) header {
+		display: block;
+	}
 	
 	/*noticias*/
 	body.content-noticias figure { width: 100%; height: auto;}
@@ -52,7 +56,7 @@
 	    text-shadow: 0px 0px 6px rgba(255,255,255,0.7);
 	}
 
-	figure { width: 100%; height: auto; position:relative; margin: 2px 0; }
+	/*figure { width: 100%; height: auto; position:relative; margin: 2px 0; }
 	figure img { width: 100%;  height: auto;  position:relative; left:0; top:0; }			
 	figcaption  {
 		position: absolute;		
@@ -65,7 +69,7 @@
 		text-align: left;
 	    background-color:rgba(0,0,0,0.5);
 	    text-shadow: 0px 0px 6px rgba(255,255,255,0.7);
-	}
+	}*/
 
 	/*polla*/
 	body.content-polla .hidden {display:none;}
@@ -122,6 +126,37 @@
 
 
 	hl2 { font-size:1.2em; font-weight: bold; margin: 5px 0 5px 0;}
+
+
+	body.content-home .container { padding:  0 !important; margin: 0 !important;}
+	body.content-home .container .row { padding: 2px !important; margin: 0 !important;}
+	body.content-home .container .row .metro { padding: 2px !important; margin: 0 !important;}
+	
+			
+	body.content-home header {display: none;}
+	body.content-home #wrapper, body.content-home #wrapperM { 
+		position: absolute;
+		z-index: 1; 
+		top: 0px; 
+		bottom: 0; 
+		left: 0; 
+		width: 100%; 
+		background: #fff;
+	}
+
+	body.content-home figure { width: 100%; height: auto;}
+	body.content-home figure img { width: 100%;  height: auto; padding: 0; margin: 0;}			
+	body.content-home figcaption {
+		margin: 0;
+		font-size : 1.2em;			
+		padding: 5px; 
+		width:100%; 
+		line-height:20px;				 
+		color:#ffffff; 
+		text-align: left;
+	    background-color:#3E79C4;
+	    
+	}
 
 
 
