--- a/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
@@ -1,102 +1,191 @@
-@(title: String)(content: Html)
+@(title: Html, nav: String = "")(content: Html)
 
 <!DOCTYPE html>
 
 <html>
     <head>
-        <title>Polla Mundial | Mundial Brasil 2014</title>
-        
-        <meta charset="utf-8">
-        <meta property="og:title" content="La Polla Mundial TvMax - Brasil 2014" />
-		<meta property="og:description" content="Ya armé La Polla Mundial TvMax - Brasil 2014, elige al próximo campeón del mundo y a quiénes le tiene que ganar para levantar la copa. Te toca a ti, arma el tuyo y compártelo." />
-		<meta property="og:image" content="http://polla.tvmax-9.com/assets/images/thumbnail_logo.png" />
-
-    	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-    	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    	<meta name="description" content="@title">
-    	<meta name="author" content="Hecticus Software, Inc.">
-    	<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/normalize.css")">        
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.min.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/animate.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/polla.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+    	
+        <title>TvMax</title>
+   
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/mainAdmin.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+        
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/polla2.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/facebook.js")" type="text/javascript"></script>
-       	<script src="@routes.SignUp.jsRoutes()" type="text/javascript"></script>
-       	<script src="@routes.Assets.at("javascripts/ga.js")" type="text/javascript"></script>
-		     
+        <script src="@routes.Assets.at("javascripts/jquery-ui-1.10.4.js")" type="text/javascript"></script>        
+        <script src="@routes.Assets.at("javascripts/bootstrap.js")" type="text/javascript"></script>
+        
+		<script>
+	  		$(function() {
+	  		
+	  		
+	  			/*$(document).on('click','.cancel', function() {
+	  				
+	  				var _img = $('#' + $(this).data('img'));
+	  				var _input = $('input[data-img="' + $(this).data('img') + '"]');
+	  				
+	  				_img.attr('src',_img.data('src'));	
+	  				_input.val('');			
+	  				$(this).hide();
+
+	  			});	  */	
+	  		
+	  			/*$(document).on('change','input[type=file]', function() {	  			
+	  				  				
+	  				var _img = $('#' + $(this).data('img'));
+	  				var _cancel = $('a[data-img="' + $(this).data('img') + '"]');
+	  				
+					var files = !!this.files ? this.files : [];
+        			if (!files.length || !window.FileReader) {
+        				_img.attr('src',_img.data('src'));
+        				_cancel.hide();
+        				return; 	
+        			};	// no file selected, or no FileReader support
+ 
+	        		if (/^image/.test(files[0].type)) { // only image file
+	            		var reader = new FileReader(); // instance of the FileReader
+	            		reader.readAsDataURL(files[0]); // read the local file 
+	            		reader.onloadend = function() { // set image data as background of div
+	            			_img.attr('src',this.result);	            			
+	            			_img.show();
+	            			_cancel.show();						  
+	            		};
+	       		 	} else {
+	       		 		_img.val('');
+	       		 		_img.attr('src',_img.data('src'));	
+	       		 	};
+
+    			});*/
+	  			
+	  			
+	  			$("#alert").click(
+	  				function () {
+	  					$(this).toggle();
+	  				}
+	  			);
+
+	  			
+	    		$( "#sortable tbody").sortable();	    		
+	    		$( "#sortable tbody").disableSelection();
+
+	    		$("#ajax").click(function () {
+	    			
+						var _url = $('#ajax').data('url'); 	    				
+	    				var _arrC = [];
+	    					    					    					    			
+	    				$("#sortable tbody tr").each(function (i) {
+	    					_arrC.push($(this).data("id"));
+	    				});
+	    					
+						_arrC =_arrC.join(',');	
+	    				$.ajax({
+  							url: _url + _arrC,
+  							success: function(data) {
+  								$('#alert').show();
+  							}
+  						});
+	    				
+                		return false;
+
+		            }
+    			);
+
+
+
+
+
+	  		});
+	  		
+				  		
+	  		
+  		</script>
+		<style>
+			.ui-sortable-helper {width:950px; height:40px;}
+		</style>
+		
     </head>
-    
-    
-    <script>
-    	$(function() {
+    <body>
+        
+        <div class="topbar">
+            <div class="fill">
+                <div class="container">
+                	@if(session.get("logged") != null) {
+                		
+	                    <a class="brand" href="@controllers.routes.Adm.index()">INICIO</a>
+	                    	                    
+	                    <ul class="nav">
+							
+							
+								<li class="dropdown">
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown">Categorías<span class="caret"></span></a>
+						          	<ul class="dropdown-menu" role="menu">
+							            <li><a href="@controllers.routes.Category.list()">Listar</a></li>
+							            <li><a href="@controllers.routes.Category.lsort()">Ordenar</a></li>
+							             <li class="divider"></li>
+							            <li><a href="@controllers.routes.Category.blank()">Crear</a></li>
+						          	</ul>
+						        </li>                        	
+		                        	
+								<li class="dropdown">
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown">Banners<span class="caret"></span></a>
+						          	<ul class="dropdown-menu" role="menu">
+							            <li><a href="@controllers.routes.Banner.list()">Listar</a></li>
+							            <li><a href="@controllers.routes.Banner.lsort()">Ordenar</a></li> 
+							            <li class="divider"></li>					            
+							            <li><a href="@controllers.routes.Banner.blank()">Crear</a></li>
+						          	</ul>
+						        </li>                        	
+		                        
+		                        @if(session.get("logged") == "1") {
+			                        <li class="dropdown">
+										<a href="#" class="dropdown-toggle" data-toggle="dropdown">Usuario<span class="caret"></span></a>
+							          	<ul class="dropdown-menu" role="menu">
+								            <li><a href="@controllers.routes.User.list()">Listar</a></li>					            
+								            <li class="divider"></li>
+								            <li><a href="@controllers.routes.User.blank()">Crear</a></li>
+							          	</ul>
+							        </li>	
+		                        }
+		                             
+		                        
+		                        <li>		 
+		                            <a href="@controllers.routes.User.logout()">Salir</a>
+	                        </li>
+							
+								
+								
+						</ul>
+	                    
+					}
+                </div>
+            </div>
+        </div>
 
+        <div class="container">
+            <div class="content">
+                
+                <div class="page-header">                
+                    <!--h1>@title</h1-->
+					<img src="@routes.Assets.at("images/logo-hecticus.png")" style="width: 30%; height:auto;" />
+					&nbsp;&nbsp;
+                    <img src="@routes.Assets.at("images/logo-tvmax.png")" style="width:12%; height:auto;" />
+                </div>
 
-   		$(document).on('click','.iPrediction', function() {
-   			var _url = 'http://mundial.tvmax-9.com/polla/?page=share&id=@session.get("connected")';
-			window.open(_url);
-		});
+                <div class="row">
+                    <div class="span14">
+                        @content
+                    </div>
+                </div>
+                
+            </div>
 
-    		
-    	$(document).on('click','.save', function() {
-					
-			$('.alert').removeAttr('style');
-			$('.alert').addClass('hidden');
-			
-			var btn = $(this);
-			btn.button('loading');
-			
-			
-			var jsonSave={idClient:'@session.get("connected")',clientPrediction:{matches:[]}};
-	
-			$.each(arrPhase, function(index,phase) {
-				$.each(phase.group, function(index,group) {
-					$.each(group.game, function( index, game ) {								
-						jsonSave.clientPrediction.matches.push({"id_match":game.id,"score_team_a":game.team[0].goals.f,"score_team_b":game.team[1].goals.f});
-					});
-				});
-			});
-	
-			
-			$.ajax({
-	    		url: "@controllers.matchesapi.routes.ClientBetController.storeClientBet",
-	    		type: 'POST',	            		
-	    		dataType: 'json',
-	    		data: JSON.stringify(jsonSave),
-	    		contentType: "application/json; charset=utf-8"
-	    	}).always(function () {
-				btn.button('reset');    				
-			}).done(function(msg) {
-				
-				if (msg.error==0) {
-					alert('Bien! Tu pronóstico se ha guardado con éxito.');
-				} else {
-					alert('Error! Tu pronóstico no se ha logrado guardar; Vuelve a intentarlo.');	
-				}
-	
-			}).fail(function( jqXHR, textStatus ) {  						
-				$('.alert-danger').removeClass('hidden');
-				
-			});
-	
-	
-		});
-				
-    		
-    	});
-    	
-    	
-    </script>
-    
-    <body >
-		<div class="container" style="max-width: 940px;" >
-			@content	
-			
-			
-		</div>
+            <footer>				
+                <p>
+                    <a href="http://www.hecticus.com">www.hecticus.com</a>
+                </p>
+            </footer>
+
+        </div>
+        
     </body>
-    
 </html>
