--- a/FutbolBrasil/app/platforms/android/assets/www/css/default.css
+++ b/FutbolBrasil/app/platforms/android/assets/www/css/default.css
@@ -118,11 +118,10 @@ row:not(input):not(textarea) {
 	}
 	
 	
-	body.content-scorers #wrapper .scroller .container .row ,
-	body.content-match #wrapper .scroller .container .row ,
-	body.content-news #wrapper .scroller .container .row ,
-	body.content-standings #wrapper .scroller .container .row 
-	{padding: 0 20px !important;}
+
+	body.content-news #wrapper .scroller .container .row   {
+		padding: 0 20px !important;
+	}
 	
 	
 	body.content-news #wrapper .scroller .container .row .news {
@@ -162,4 +161,54 @@ row:not(input):not(textarea) {
 	body.content-standings .competition.active {
 		display:block;
 	}
+	
+	
+	
+	table thead tr th {
+		text-align: center;
+		color: #ffffff;
+		background: #3B5CA9;
+	}
+	
+	table tbody tr td {
+		text-align: center;
+		font-size: 0.8em;
+	}
+	
+	
+	div.header {
+		position: absolute; 
+		z-index: 4;
+		top: 0;
+		left:0;
+		right:0;		
+		width: 100%; 
+		height: 35px;
+		line-height: 35px;		
+		background-color: #3B9444;			
+		padding: 0 !important; 
+		margin:0 !important;		
+		border: 0;
+		color:#ffffff;
+	}
+	
+	
+	
+	div.header .left {
+		text-align: right; 		
+	}
+	
+	div.header .center {
+		text-align: center; 
+		font-size: 1em;
+		font-weight: bold;
+	}
+	
+	div.header .right {
+		text-align: left; 
+	}
+	
+	
+	
+	
 
