--- a/FutbolBrasil/app/platforms/android/assets/www/css/default.css
+++ b/FutbolBrasil/app/platforms/android/assets/www/css/default.css
@@ -56,7 +56,7 @@ row:not(input):not(textarea) {
 	}
 	
 	footer {
-		line-height: 20px;
+		line-height: 25px;
 		color:#FFFFFF;
 		bottom: 0;
 		background: #9D9D9D;
@@ -209,10 +209,32 @@ row:not(input):not(textarea) {
 	}
 	
 	.error {
+		position: relative;
+		margin: 0 auto;
+		text-align:center;
 		color: #9D9D9D;
+		width: 100%;
+		height:auto;
+		left: 0;
+		top: 25%;
+  		bottom: 0; 
+  		right: 0;
+        z-index: 10;
 	}
 	
 	
-	
+	.loading {
+		position: relative;
+		margin: 0 auto;
+		text-align:center;
+		width: 100%; 
+		height:auto;		
+		left: 0;
+		top: 45%;
+  		bottom: 0; 
+  		right: 0;
+        z-index: 10;
+        font-size:1.8em;
+    }
 	
 
